[package]
name = "DBMS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"], default-features = false }
clap = "3.0"
serde = "1.0"
serde_yaml = "0.8"
futures = "0.3"
dirs = "4.0"
lazy_static = "1.4"
