[package]
name = "DBMS"
version = "1.0.0"
edition = "2021"
authors = ["Spencer Powell(Pagwin) <dev@pagwin.xyz>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"], default-features = false }
clap = "3.0"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
dirs = "4.0"
lazy_static = "1.4"
tokio = {version = "1.16", features = ["rt", "macros"]}
